--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@handlewithcare/react-prosemirror": "^2.4.11",
+    "lucide-react": "^0.540.0",
     "prosemirror-commands": "^1.7.1",
     "prosemirror-history": "^1.4.1",
     "prosemirror-keymap": "^1.2.3",
@@ -22,6 +23,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-reconciler": "^0.32.0",
+    "react-router": "^7.8.1",
+    "react-router-dom": "^7.8.1",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
