--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^19.1.0",
     "react-reconciler": "^0.32.0",
     "react-router": "^7.8.1",
-    "react-router-dom": "^7.8.1"
+    "react-router-dom": "^7.8.1",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
