--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/parser": "^7.28.3",
     "@handlewithcare/react-prosemirror": "^2.4.11",
     "lucide-react": "^0.540.0",
     "prosemirror-commands": "^1.7.1",
@@ -24,8 +25,7 @@
     "react-dom": "^19.1.0",
     "react-reconciler": "^0.32.0",
     "react-router": "^7.8.1",
-    "react-router-dom": "^7.8.1",
-    "react-transition-group": "^4.4.5"
+    "react-router-dom": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
