fix: update dependencies and remove unused plugins
- downgraded @handlewithcare/react-prosemirror from 2.4.11 to 2.4.3
- added fast-equals dependency
- refactored imports in Editor components to simplify paths
- removed unused abbreviation and autoclosing plugins
- updated settings components to include new hotkeys settings
- improved settings UI with descriptions for switches
- added versioning to default settings
- implemented throttling for localStorage updates in useSettings hook
- added new HotkeysSettings component

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@babel/parser": "^7.28.3",
-    "@handlewithcare/react-prosemirror": "^2.4.11",
+    "@handlewithcare/react-prosemirror": "^2.4.3",
+    "fast-equals": "^5.2.2",
     "lucide-react": "^0.540.0",
     "prosemirror-commands": "^1.7.1",
     "prosemirror-history": "^1.4.1",
